Fix: Update story view on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -306,7 +306,7 @@ h1, h2, h3, h4, h5, h6, label, button, a, span, input {
     height: auto;
     right: 0;
     top: 0;
-
+    z-index: 1000;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-end;
@@ -329,7 +329,7 @@ h1, h2, h3, h4, h5, h6, label, button, a, span, input {
 
   .top-left-buttons {
     position: absolute;
-    z-index: 101;
+    z-index: 1000;
     width: 100px;
     height: auto;
     left: 0;
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6, label, button, a, span, input {
 	display: grid;
 	width: 100%;
 	height: 100%;
-	z-index: 100;
+	z-index: 1000;
 	background-color: black;
 	grid-template-rows: 0.2fr 1fr 1fr;
 }
